--- a/Stream.html
+++ b/Stream.html
@@ -23,11 +23,9 @@
        "https://amigofx.com:1936/TCNDigital/TCNDigital/playlist.m3u8"
    
    ,
-   "autoPlay":true,
-   "volume":"75",
-   "mute":false,
+   "autoPlay":false,
    "loop":false,
-   "audioOnly":false,
+   "volume":"75",
    "uiShowQuickRewind":true,
    "uiQuickRewindSeconds":"30"
   }
